main/default/objects/Eligibility_Status__c/Eligibility_Status__c.object-meta.xml
<CustomObject>
    <label>Eligibility Status</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Eligibility Status #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>