main/default/objects/Eligibility_Status__c/fields/Modifier_Product__c.field-meta.xml
<CustomField>
    <fullName>Modifier_Product__c</fullName>
    <label>Modifier Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Modifier_Product</valueSetName>
    </valueSet>
</CustomField>