main/default/objects/Eligibility_Status__c/fields/Rating_Modifier_Name__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Name__c</fullName>
    <formula>Rating_Modifier_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Modifier Name</label>
    <type>Text</type>
</CustomField>