main/default/objects/Eligibility_Status__c/fields/Rating_Modifier_Template__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Template__c</fullName>
    <label>Rating Modifier Template</label>
    <referenceTo>Rating_Modifier_Template__c</referenceTo>
    <relationshipLabel>Eligibility Statuses</relationshipLabel>
    <relationshipName>Eligibility_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>