main/default/objects/Eligibility_Status__c/fields/Rating_Modifier_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Value__c</fullName>
    <label>Rating Modifier Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>