main/default/objects/Eligibility_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rating_Modifier_Template__c</columns>
    <columns>Modifier_Product__c</columns>
    <columns>Rating_Modifier_Value__c</columns>
    <columns>Eligibility_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>